remove unused changes